changed rotated pictures

--- a/adventures/trips/ocsd.html
+++ b/adventures/trips/ocsd.html
@@ -148,7 +148,7 @@
                         </ol>
                       
                         <figure class="item active text-faded">
-                          <img src="../img/ocsd/slideshow/1.jpg">
+                          <img src="../img/ocsd/slideshow/1.jpg" class="rotate180">
                             <figcaption>Group picture with all of us.</figcaption>
                         </figure>
 
@@ -158,7 +158,7 @@
                         </figure>
 
                         <figure class="item text-faded">
-                          <img src="../img/ocsd/slideshow/3.jpg">
+                          <img src="../img/ocsd/slideshow/3.jpg" class="rotate180">
                             <figcaption>Morgan, Costas, Emily, and myself.</figcaption>
                         </figure>
 
