--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
 
     <!-- sets a different background picture on each page -->
     <style type="text/css">
-        header {
-            /*background-image:url(img/background.jpg);*/
-            background-color: #FFFFFF;
-        }
+        header {background-color: #FFFFFF;}
     </style>
 
     <!-- Bootstrap Core CSS -->
@@ -63,7 +60,7 @@
 
                     <div class="col-lg-6 opaque100">
                         <a href="meals/index.html" class="portfolio-box">
-                            <img src="adventures/img/snowvalley/snowvalley_front.jpg" class="img-responsive" alt="">
+                            <img src="img/meals_main.jpg" class="img-responsive" alt="">
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
                                     <div class="project-name">
