finished tokyo google maps

--- a/adventures/trips/tokyo.html
+++ b/adventures/trips/tokyo.html
@@ -96,13 +96,9 @@
                     <h2 class="section-heading">How It All Began</h2>
                     <hr class="light">
                     <p class="text-faded">The idea of this trip started off with my boss Joel and me. We were casually talking about going to a trip somewhere so we could use the rest of our PTO that wouldn't roll over to the next year. He hadn't been to Tokyo before and I was just a new grad who wanted to get his feet wet into traveling.<br><br>
-
                     I was in a training session at work when he and I were talking about it. When the idea of Japan came up, I happened to be sitting next to two people who we both knew (he knew them better than me), Kyle and Emi. This is how I brought it up to them: I turned to them, said "Hey, Tokyo?" and they said, "Yeah I'm down." Pretty neat right?<br><br>
-
                     After getting a small group of people who were interested, they also convinced another person to come with us, Guillermo. We settled on a date (December 3 - December 10), bought our tickets, found a nice Airbnb in the Shinjuku area, and started planning what we were going to do for a week there.<br><br>
-
                     Now, I love to plan trips. Just the thought of researching a country or a city and really getting a dive (albeit shallow) into a culture and what it has to offer me is amazing. Because of my personality, I created a Google doc that contained restaurants, attractions, and other things we wanted to do. <u><a style="color:black;" href="https://docs.google.com/document/d/1C78CPg2ik5Gzc7CPPZYm3AHmJRgQhp_TmMb4VybPMko" target="_blank">Here</a></u> is the link if you want to check it out. It wasn't necessarily a "follow the itinerary as closely as possible" type of doc (as none of these that I create are), but they're more of a "here are a bunch of ideas, let's decide what we all want to do and if you have any ideas put them on here" type of doc.<br><br>
-
                     So after we figured out for the most part what we wanted to do, it was just a matter of preparing for our trip, buying day tour passes, and then we were off!</p>
                 </div>
             </div>
@@ -120,6 +116,9 @@
                     When we got to the Narita airport, we were already overwhelmed by all the Japanese people were speaking to us. We didn't understand any of it, and all the signs were in Japanese as well. We had some trouble figuring out where we needed to get the train tickets and the 3-day subway pass, but eventually we got out of the airport and onto the train to Tokyo. After a 50 minute train ride, we arrived at Tokyo Station and then had to transfer to another subway to go to the Yotsuya Station. When we arrived, we were lost on how to get to the Airbnb, but eventually we made our way there. Our Airbnb host, Ben, helped us out with directions to get there and even met us near his place! He was very welcoming and nice.<br><br>
 
                     Most of the rest of the trip can be explained in the pictures below, but it was just a ton of sightseeing and taking pictures of food. We all went full-on tourist taking pictures of even the minute things. But hey, when in Tokyo right? We drank a lot of beer, ate a lot of yakitori, ramen, and sushi, and I couldn't be happier. Sushi is my favorite food, so eating authentic, fresh, salmon was a dream come true for me. And I always love a good bowl on ramen on a cold December day in Japan. The only thing is because we didn't know any Japanese, we had to either use the Google Translate picture translator or just point at things that we wanted. Some of the people such as restaurant and airport employees knew basic English to help us, but if it wasn't for Google, we would all be screwed.</p>
+
+                    <br>
+                    <div id="map"></div>
                 </div>
             </div>
         </div>
@@ -623,7 +622,12 @@
     <script src="../js/creative.min.js"></script>
 
     <script src="../js/mustache.js"></script>
-    <!-- <script src="../main.js"></script> -->
+
+    <!-- To show Google Map -->
+    <script src="../js/script.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDbVKPP09GmeeYpjlWw0vh6F03dES9omYI&callback=initmapTokyo">
+    </script>
+
 </body>
 
 </html>
