--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Liver Mass Calculator</title>
     <h1>Liver Mass Calculator</h1>
-    <!-- <style>
+    <style>
       .accordion {
         background-color: #eee;
         color: #444;
@@ -27,7 +27,7 @@
         background-color: white;
         overflow: hidden;
       }
-    </style> -->
+    </style>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -46,10 +46,10 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
   </body>
-  <!-- <script>
+  <script>
     var acc = document.getElementsByClassName("accordion");
     var i;
-    
+     
     for (i = 0; i < acc.length; i++) {
       acc[i].addEventListener("click", function() {
         this.classList.toggle("active");
@@ -61,5 +61,5 @@
         }
       });
     }
-  </script> -->
+  </script>
 </html>
