--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
           <button id="clearButton" class="btn btn-outline-secondary btn-sm" onclick="clearInputs()">Clear</button>
           <br><br>
-          <input type="text" value="" id="answer" style='width:100%' class="answerWithNoBorder" readonly="readonly">
+          <input type="text" value="" id="answer" class="hidden" readonly="readonly">
           <br><br>
           <button id="copyTextId" class="btn btn-outline-secondary btn-sm hidden" onclick="copyText()" data-toggle="tooltip" data-placement="right" title="Text copied!">Copy text</button>
           <p id="debug"></p>
