--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <br><br>
           <input type="text" value="" id="answer" class="hidden" readonly="readonly">
           <br><br>
-          <button id="copyTextId" class="btn btn-outline-secondary btn-sm hidden" onclick="copyText()" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="Text copied!">Copy text</button>
+          <button id="copyTextId" class="btn btn-outline-secondary btn-sm hidden" onmouseout="hideTooltip()" onclick="copyText()" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="Text copied!">Copy text</button>
           <p id="debug"></p>
           </div>
         </div>
@@ -129,15 +129,5 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-    <script>
-      $(function () {
-        // This enables the tooltips to be triggered when they are clicked
-        $('[data-toggle="tooltip"]').tooltip({"trigger":'click'})
-        // When you leave the copy text button, the tooltip goes away
-        $('#copyTextId').mouseout(function() {
-          $('#copyTextId').tooltip('hide')
-        })
-      })
-    </script>
   </body>
 </html>
