Added data-bs-trigger to fix tooltip

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <br><br>
           <input type="text" value="" id="answer" class="hidden" readonly="readonly">
           <br><br>
-          <button id="copyTextId" class="btn btn-outline-secondary btn-sm hidden" onmouseout="hideTooltip()" onclick="copyText()" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="Text copied!">Copy text</button>
+          <button id="copyTextId" class="btn btn-outline-secondary btn-sm hidden" onmouseout="hideTooltip()" onclick="copyText()" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-trigger="manual" data-bs-title="Text copied!">Copy text</button>
           <p id="debug"></p>
           </div>
         </div>
