--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>Radiology Algorithms</title>
     <h1>Radiology Algorithms</h1>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/styles.css" />
-    <link rel="stylesheet" href="css/liver-mass.css" />
+    <link rel="stylesheet" href="styles.css" />
+    <!--<link rel="stylesheet" href="css/liver-mass.css" />-->
   </head>
   
   <body>
@@ -19,7 +19,7 @@
         <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
           <div class="accordion-body">
            <ul class="liverMassCalc">
-            <div id="liverMassSizeDiv" class="divContainer">
+            <div id="liverMassSizeDiv" class="divContainer liverMassContainer">
               <span>Liver Mass Size</span>
               <li>
                 <input id="liverMassSize-lessThan1" type="radio" name="liverMassSize" onclick="check(this.value, this.name)" value="lessThan1" class="radioButton">
@@ -32,7 +32,7 @@
               <br>
             </div>
   
-            <div id="riskLevelLessThan1Div" class="divContainer" style="display:none">
+            <div id="riskLevelLessThan1Div" class="divContainer liverMassContainer" style="display:none">
               <span>Risk Level</span>
               <li>
                 <input id="riskLevel-lessThan1-low" type="radio" name="riskLevel-lessThan1" onclick="check(this.value, this.name)" value="low" class="radioButton">
@@ -43,7 +43,7 @@
               <br>
             </div>
   
-            <div id="imagingFeatures1to1point5Div" class="divContainer" style="display:none">
+            <div id="imagingFeatures1to1point5Div" class="divContainer liverMassContainer" style="display:none">
               <span>Imaging Features</span>
               <li>
                 <input id="imagingFeatures-1to1point5-benign" type="radio" name="imagingFeatures-1to1point5" onclick="check(this.value, this.name)" value="benign" class="radioButton">
@@ -56,7 +56,7 @@
               <br>
             </div>
   
-            <div id="riskLevel1to1point5Div" class="divContainer" style="display:none">
+            <div id="riskLevel1to1point5Div" class="divContainer liverMassContainer" style="display:none">
               <span>Risk Level</span>
               <li>
                 <input id="riskLevel-1to1point5-low" type="radio" name="riskLevel-1to1point5" onclick="check(this.value, this.name)" value="low" class="radioButton">
@@ -67,7 +67,7 @@
               <br>
             </div>
   
-            <div id="imagingFeaturesGreaterThan1point5Div" class="divContainer" style="display:none">
+            <div id="imagingFeaturesGreaterThan1point5Div" class="divContainer liverMassContainer" style="display:none">
               <span>Imaging Features</span>
               <li>
                 <input id="imagingFeatures-greaterThan1point5-benign" type="radio" name="imagingFeatures-greaterThan1point5" onclick="check(this.value, this.name)" value="benign" class="radioButton">
@@ -78,7 +78,7 @@
               <br>
             </div>
   
-            <div id="riskLevelGreaterThan1point5Div" class="divContainer" style="display:none">
+            <div id="riskLevelGreaterThan1point5Div" class="divContainer liverMassContainer" style="display:none">
               <span>Risk Level</span>
               <li>
                 <input id="riskLevel-greaterThan1point5-low" type="radio" name="riskLevel-greaterThan1point5" onclick="check(this.value, this.name)" value="low" class="radioButton">
@@ -102,12 +102,45 @@
       <div class="accordion-item">
         <h2 class="accordion-header" id="headingTwo">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-            Accordion Item #2
+            SRU Gallbladder Polyp Guidelines
           </button>
         </h2>
         <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
           <div class="accordion-body">
-            <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+            <ul class="gallbladderCalc">
+              <div id="gallbladderRiskDiv" class="divContainer gallbladderContainer">
+                <span>Risk Level</span>
+                <li>
+                  <input id="gallbladderRisk-extremelyLow" type="radio" name="gallbladderRisk" onclick="gallbladder_check(this.value, this.name)" value="extremelyLow" class="gallbladder_radioButton">
+                  <label for="gallbladderRisk-extremelyLow">Extremely Low</label>
+                  <input id="gallbladderRisk-low" type="radio" name="gallbladderRisk" onclick="gallbladder_check(this.value, this.name)" value="low" class="gallbladder_radioButton">
+                  <label for="gallbladderRisk-low">Low</label>  
+                  <input id="gallbladderRisk-indeterminate" type="radio" name="gallbladderRisk" onclick="gallbladder_check(this.value, this.name)" value="indeterminate" class="gallbladder_radioButton">
+                  <label for="gallbladderRisk-indeterminate">Indeterminate</label>  
+                </li>
+                <br>
+              </div>
+              
+              <div id="gallbladderExtremelyLowSizeDiv" class="divContainer gallbladderContainer" style="display:none">
+                <span>Size</span>
+                <li>
+                  <input id="extremelyLow-lessThan9" type="radio" name="extremelyLow-Size" onclick="gallbladder_check(this.value, this.name)" value="extremelyLow-lessThan9" class="gallbladder_radioButton">
+                  <label for="extremelyLow-lessThan9"><= 9 mm</label>
+                  <input id="extremelyLow-10to14" type="radio" name="extremelyLow-Size" onclick="gallbladder_check(this.value, this.name)" value="extremelyLow-10to14" class="gallbladder_radioButton">
+                  <label for="extremelyLow-10to14">10-14 mm</label>  
+                  <input id="extremelyLow-15orMore" type="radio" name="extremelyLow-Size" onclick="gallbladder_check(this.value, this.name)" value="extremelyLow-15orMore" class="gallbladder_radioButton">
+                  <label for="extremelyLow-15orMore">>= 15mm</label>  
+                </li>
+                <br>
+              </div>
+              
+              <button id="gallbladder_clearButton" class="btn btn-outline-secondary btn-sm" onclick="gallbladder_clearInputs()">Clear</button>
+              <br><br>
+              <input type="text" value="" id="gallbladder_answer" class="hidden" readonly="readonly">
+              <br><br>
+              <button id="gallbladder_copyTextId" class="btn btn-outline-secondary btn-sm hidden" onmouseout="gallbladder_hideTooltip()" onclick="gallbladder_copyText()" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-trigger="manual" data-bs-title="Text copied!">Copy text</button>
+              <p id="debug"></p>
+            </ul>
           </div>
         </div>
       </div>
@@ -124,8 +157,8 @@
         </div>
       </div>
     </div>
-    <script src="js/scripts.js"></script>
-    <script src="js/liver-mass.js"></script>
+    <script src="script.js"></script>
+    <!--<script src="js/liver-mass.js"></script>-->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
