--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                   <input id="extremelyLow-10to14" type="radio" name="extremelyLow-Size" onclick="gallbladder_check(this.value, this.name)" value="extremelyLow-10to14" class="gallbladder_radioButton">
                   <label for="extremelyLow-10to14">10-14 mm</label>  
                   <input id="extremelyLow-15orMore" type="radio" name="extremelyLow-Size" onclick="gallbladder_check(this.value, this.name)" value="extremelyLow-15orMore" class="gallbladder_radioButton">
-                  <label for="extremelyLow-15orMore">>= 15mm</label>  
+                  <label for="extremelyLow-15orMore"≥ 15mm</label>  
                 </li>
                 <br>
               </div>
@@ -137,13 +137,13 @@
                 <span>Size</span>
                 <li>
                   <input id="low-lessThan6" type="radio" name="low-Size" onclick="gallbladder_check(this.value, this.name)" value="low-lessThan6" class="gallbladder_radioButton">
-                  <label for="low-lessThan6"><= 6 mm</label>
+                  <label for="low-lessThan6">≤ 6 mm</label>
                   <input id="low-7to9" type="radio" name="low-Size" onclick="gallbladder_check(this.value, this.name)" value="low-7to9" class="gallbladder_radioButton">
                   <label for="low-7to9">7-9 mm</label>
                   <input id="low-10to14" type="radio" name="low-Size" onclick="gallbladder_check(this.value, this.name)" value="low-10to14" class="gallbladder_radioButton">
                   <label for="low-10to14">10-14 mm</label>
                   <input id="low-15orMore" type="radio" name="low-Size" onclick="gallbladder_check(this.value, this.name)" value="low-15orMore" class="gallbladder_radioButton">
-                  <label for="low-15orMore">>= 15mm</label>  
+                  <label for="low-15orMore">≥ 15mm</label>  
                 </li>
                 <br>
               </div>
@@ -152,9 +152,9 @@
                 <span>Size</span>
                 <li>
                   <input id="indeterminate-lessThan6" type="radio" name="indeterminate-Size" onclick="gallbladder_check(this.value, this.name)" value="indeterminate-lessThan6" class="gallbladder_radioButton">
-                  <label for="indeterminate-lessThan6"><= 6 mm</label>
+                  <label for="indeterminate-lessThan6">≤ 6 mm</label>
                   <input id="indeterminate-7orMore" type="radio" name="indeterminate-Size" onclick="gallbladder_check(this.value, this.name)" value="indeterminate-7orMore" class="gallbladder_radioButton">
-                  <label for="indeterminate-7orMore">>= 7mm</label>  
+                  <label for="indeterminate-7orMore">≥ 7mm</label>  
                 </li>
                 <br>
               </div>
