Removed debugging, fixed tag

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                   <input id="extremelyLow-10to14" type="radio" name="extremelyLow-Size" onclick="gallbladder_check(this.value, this.name)" value="extremelyLow-10to14" class="gallbladder_radioButton">
                   <label for="extremelyLow-10to14">10-14 mm</label>  
                   <input id="extremelyLow-15orMore" type="radio" name="extremelyLow-Size" onclick="gallbladder_check(this.value, this.name)" value="extremelyLow-15orMore" class="gallbladder_radioButton">
-                  <label for="extremelyLow-15orMore"≥ 15mm</label>  
+                  <label for="extremelyLow-15orMore">≥ 15mm</label>  
                 </li>
                 <br>
               </div>
