Fixed operators; Fixed adrenal calculator for 0 inputs; Hid results if inputs were blank

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                   <input id="adnexalMenopause-premenopausal" type="radio" name="adnexalMenopause" onclick="adnexal_check(this.value, this.name)" value="premenopausal" class="adnexal_radioButton">
                   <label for="adnexalMenopause-premenopausal">Premenopausal or < 50 yo if status unknown</label>
                   <input id="adnexalMenopause-postmenopausal" type="radio" name="adnexalMenopause" onclick="adnexal_check(this.value, this.name)" value="postmenopausal" class="adnexal_radioButton">
-                  <label for="adnexalMenopause-postmenopausal">Postmenopausal or >= 50 yo if status unknown</label>
+                  <label for="adnexalMenopause-postmenopausal">Postmenopausal or ≥ 50 yo if status unknown</label>
                 </li>
                 <br>
               </div>
@@ -312,7 +312,7 @@
                 <span>Size</span>
                 <li>
                   <input id="premenopausalSize-5orLess" type="radio" name="premenopausalSize" onclick="adnexal_check(this.value, this.name)" value="5orLess" class="adnexal_radioButton">
-                  <label for="premenopausalSize-5orLess"><= 5 cm</label>
+                  <label for="premenopausalSize-5orLess">≤ 5 cm</label>
                   <input id="premenopausalSize-moreThan5" type="radio" name="premenopausalSize" onclick="adnexal_check(this.value, this.name)" value="moreThan5" class="adnexal_radioButton">
                   <label for="premenopausalSize-moreThan5">> 5 cm</label>
                 </li>
@@ -336,7 +336,7 @@
                 <span>Size</span>
                 <li>
                   <input id="postmenopausalSize-3orLess" type="radio" name="postmenopausalSize" onclick="adnexal_check(this.value, this.name)" value="3orLess" class="adnexal_radioButton">
-                  <label for="postmenopausalSize-3orLess"><= 3 cm</label>
+                  <label for="postmenopausalSize-3orLess">≤ 3 cm</label>
                   <input id="postmenopausalSize-moreThan3" type="radio" name="postmenopausalSize" onclick="adnexal_check(this.value, this.name)" value="moreThan3" class="adnexal_radioButton">
                   <label for="postmenopausalSize-moreThan3">> 3 cm</label>
                 </li>
